# eVSS

./: README.md  compile.sh  evss_AE.pem  transparent_version.sh  trusted_setup_version.sh
KZG_ext/: .gitmodules  CMakeCache.txt  CMakeLists.txt  DKG_VSS.cbp  KZG_std  Makefile  README.md  cmake_install.cmake  create_table.py  main  pc  prime_combo.cpp  root_of_unity_finder.py
KZG_ext/include/: KZG_commit.h  KZG_improved_prover.h  KZG_std_prover.h  KZG_verifier.h  enviroment.h  fft.h  radix-fft.h  test_point.hpp  trusted_setup.h
KZG_ext/include/algebra/: polynomial.h
KZG_ext/include/ate-pairing/test/: java_api  loop_test  sample
KZG_ext/include/xbyak/: readme.txt
KZG_ext/src/: benchmark_algebra.cpp  kzg_main.cpp  radix_fft_test.cpp  radix_fft_test.h
Virgo/: Makefile  bfc  cmake_install.cmake  create_table.py  fft_gkr  reformat.py
Virgo/include/flo-shani-aesni/aegis/: aegis_opt.c  aegis_ref.c  flo-aegis.h
Virgo/include/infrastructure/: fiat_shamir.h
Virgo/src/VPD/: vpd_verifier.cpp
Virgo/src/linear_gkr/: prime_field.cpp  zk_verifier.cpp
